[package]
name = "rust-tagged"
version = "0.4.0"
edition = "2024"
authors = ["Codefonsi <info@codefonsi.com>"]
license = "MPL-2.0"
description = "A lightweight tagged type abstraction for type-safe IDs, etc."
repository = "https://github.com/codefonsi/rust-tagged"
homepage = "https://github.com/codefonsi/rust-tagged"
documentation = "https://docs.rs/rust-tagged"
keywords = ["tagged", "id", "type-safe", "newtype", "tagged-union"]
categories = ["data-structures"]
readme = "./README.md"
include = ["src/**/*", "Cargo.toml", "../../README.md", "LICENSE"]


[workspace]
resolver = "3" # or "3"
members = [
    "tagged-core",
    "tagged-macros",
]

[patch.crates-io]
tagged-core = { path = "tagged-core" }

[dependencies]
tagged-core = { path = "tagged-core", version = "0.4.0", features = ["serde"] }

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = {version = "1.0.140"}


[workspace.dependencies]


[features]
default = []
serde = ["tagged-core/serde"]
full = ["serde"]