[package]
name = "rust-tagged"
version = "0.7.0"
edition = "2024"
authors = ["Codefonsi <info@codefonsi.com>"]
license = "MPL-2.0"
description = "A lightweight tagged type abstraction for type-safe IDs, etc."
repository = "https://github.com/codefonsi/rust-tagged"
homepage = "https://github.com/codefonsi/rust-tagged"
documentation = "https://docs.rs/rust-tagged"
keywords = ["tagged", "id", "type-safe", "newtype", "tagged-union"]
categories = ["data-structures"]
readme = "./README.md"
include = ["src/**/*", "Cargo.toml", "../../README.md", "LICENSE"]


[workspace]
resolver = "3" # or "3"
members = [
    "tagged-core"
]

[patch.crates-io]
tagged-core = { path = "tagged-core" }

[dependencies]
tagged-core = { path = "tagged-core", version = "0.7.0", features = ["serde"] }
#tagged-macros = {path = "./tagged-macros"}

[dev-dependencies]
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = {version = "1.0.140"}
scylla = { version = "0.13", features = ["chrono", "full-serialization"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }

[workspace.dependencies]


[features]
default = []
serde = ["tagged-core/serde"]
scylla = ["tagged-core/scylla"]
full = ["serde", "scylla"]
