[package]
name = "tagged-core"
version = "0.3.0"
edition = "2024"
description = "A lightweight tagged type abstraction for type-safe IDs, etc."
license = "MPL-2.0"
authors = ["Codefonsi <info@codefonsi.com>"]
repository = "https://github.com/akashsoni01/rust-tagged"
homepage = "https://github.com/akashsoni01/rust-tagged"
documentation = "https://docs.rs/rust-tagged"
keywords = ["tagged", "id", "type-safe", "newtype", "tagged-union"]
categories = ["data-structures"]
readme = "../README.md"
include = ["src/**/*", "Cargo.toml", "../../README.md", "LICENSE"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
uuid = { version = "1.6" , features = ["v4"]}
chrono = "0.4.41"

[features]
default = []
serde = ["dep:serde"]
full = ["serde"]
