[package]
name = "tagged-core"
version = "0.6.0"
edition = "2024"
description = "A lightweight tagged type abstraction for type-safe IDs, etc."
license = "MPL-2.0"
authors = ["Codefonsi <info@codefonsi.com>"]
repository = "https://github.com/akashsoni01/rust-tagged"
homepage = "https://github.com/akashsoni01/rust-tagged"
documentation = "https://docs.rs/rust-tagged"
keywords = ["tagged", "id", "type-safe", "newtype", "tagged-union"]
categories = ["data-structures"]
readme = "../README.md"
include = ["src/**/*", "Cargo.toml", "../../README.md", "LICENSE"]

[dependencies]
serde = { version = "1.0.210", features = ["derive", "rc"], optional = true }
scylla = { version = "0.13", features = ["full-serialization"], optional = true}

[dev-dependencies]
serde_json = "1.0.140"
uuid = { version = "1.6" , features = ["v4"]}
chrono = "0.4.41"
serde = { version = "1.0.210", features = ["derive", "rc"] }
scylla = { version = "0.13", features = ["full-serialization"]}
tokio = {version = "1.46.1", features = ["rt-multi-thread"]}


[features]
default = []
serde = ["dep:serde"]
scylla = ["dep:scylla"]
full = ["serde"]
